<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background">

        <RelativeLayout
            android:id="@+id/top_issue"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <ImageView
                android:id="@+id/exercise_pic"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="7dp"
                android:background="@drawable/relativelayout" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/exercise_pic"
                android:text="@string/add_pic"
                android:textColor="@color/gray"
                android:textSize="15dp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/activity_introduce_re"
            android:layout_width="fill_parent"
            android:layout_height="220dp"
            android:layout_below="@+id/top_issue"
            android:layout_marginLeft="7dp"
            android:layout_marginRight="7dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/relativelayout">


            <EditText
                android:id="@+id/activity_introduce"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_above="@+id/share"
                android:layout_margin="13dp"
                android:background="@color/white"
                android:gravity="left|top"
                android:hint="@string/activity_hint"
                android:inputType="textMultiLine"
                android:maxLength="200"
                android:maxLines="13"
                android:textCursorDrawable="@null"
                android:textSize="15dp" />

            <RelativeLayout
                android:id="@+id/share"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_alignParentBottom="true">

                <ImageView
                    android:id="@+id/face"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@color/gray" />


                <ImageView
                    android:id="@+id/weichat_share"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_toLeftOf="@+id/sina_share"
                    android:layout_marginRight="5dp"
                    android:background="@color/gray" />

                <ImageView
                    android:id="@+id/sina_share"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_alignParentRight="true"
                    android:background="@color/gray" />


            </RelativeLayout>


        </RelativeLayout>


        <Button
            android:id="@+id/certain"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/certain"
            android:textColor="@color/white"
            android:textSize="15dp" />


    </RelativeLayout>
</RelativeLayout>
